<resources>
    <string name="app_name">Armature</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="grid_header">Grid</string>
    <string name="sizes_header">Sizes</string>

    <!-- Grid Preferences -->
    <string name="base_proportion">Number of cells across entire base</string>
    <string name="cells_displayed">Side length of displayed grid</string>
    <string name="snap_grid_title">Snap to grid</string>
    <string name="show_grid_title">Show grid</string>

    <string name="base_proportion_key" translatable="false">base_proportion</string>
    <string name="cells_displayed_key" translatable="false">cells_displayed</string>
    <string name="snap_grid_key" translatable="false">snap_grid</string>
    <string name="show_grid_key" translatable="false">show_grid</string>

    <!-- Size prefs -->
    <string name="item_radius">Item radius</string>
    <string name="node_radius">Node radius</string>

    <string name="item_radius_key" translatable="false">item_radius</string>
    <string name="node_radius_key" translatable="false">node_radius</string>

</resources>